# simple-web-app

./: .env.example  .gitignore  README.md  flake.nix  logging.json  logging.local.json  pyproject.toml
src/simple_web_app/: __init__.py  __main__.py  app.py  log.py  main.py  migration.py  runner.py
src/simple_web_app/migrations/: 20251001193400_add_news_table.sql  first.sql  second.sql
src/simple_web_app/queries/: basic.sql
src/simple_web_app/static/: style.css
src/simple_web_app/templates/: application.html  index.html  load_more.html  news_card.html  news_cards.html  oob_swap.html  search.html  search_results.html  settings.html  settings_tab.html
templates/: application.html
tests/: locustfile.py
tests/test_simple_web_app/: conftest.py  test_app.py
