[project]
name = "simple-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Silas Brack", email = "silasbrack@gmail.com" }
]
requires-python = "==3.13.*"
dependencies = [
    # HTTP server
    "uvicorn",
    "uvloop",
    "httptools",
    # Web framework
    "starlette",
    "jinja2",
    "python-multipart",
    "aiosql", # Loading SQL queries as Python functions
    "aiosqlite", # Async sqlite driver
    "argon2-cffi", # Password hashing
    "orjson", # Serializing logs as JSON
]

[dependency-groups]
dev = [
    { include-group = "test" },
    "ruff",
    "watchfiles", # Watch non-*.py files with uvicorn
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx", # Starlette TestClient support
    "locust", # Stress testing
    "beautifulsoup4", # HTML parsing
]

[project.scripts]
simple-web-app = "simple_web_app.__main__:run_uvicorn"
create-migration = "simple_web_app.migration:run_create_migration"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simple_web_app = ["queries/**", "migrations/**", "templates/**", "static/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

